[modify]新增及查詢
