# awesomeProject/docs/swagger.json
@@ -1,16 +1,72 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is PetBan Test server.",
+        "title": "PetBan Manage API",
+        "termsOfService": "https://petban.net",
+        "contact": {
+            "name": "API Support",
+            "email": "94petban@petban.net"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
-    "basePath": "/api/v1",
+    "host": "localhost:8080",
     "paths": {
         "/user/create": {
             "post": {
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User"
+                ],
                 "summary": "create user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "nickname",
+                        "name": "nickname",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/update": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "update user",
                 "parameters": [
                     {
                         "type": "string",
