# awesomeProject/main.go
@@ -1,8 +1,19 @@
+// @title PetBan Manage API
+// @version 1.0
+// @description This is PetBan Test server.
+// @termsOfService https://petban.net
+// @contact.name API Support
+// @contact.url	https://petban.net
+// @contact.email 94petban@petban.net
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host localhost:8080
+// schemes http
+
 package main
 
 import (
-	docs "awesomeProject/docs"
-	"awesomeProject/ent"
 	"context"
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
@@ -11,9 +22,11 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"log"
 	"net/http"
-)
 
-// @BasePath /api/v1
+	_ "awesomeProject/docs"
+	"awesomeProject/ent"
+	"awesomeProject/ent/user"
+)
 
 type Server struct {
 	db   *ent.Client
@@ -27,20 +40,21 @@ func initDatabase() {
 
 	if err != nil {
 		log.Fatalf("failed opening connection to mysql: %v", err)
+		return
 	}
-	defer client.Close()
-	ctx := context.Background()
+
+	sr.db = client
 
 	// Run the auto migration tool
-	if err := client.Schema.Create(ctx); err != nil {
+	if err := client.Schema.Create(context.Background()); err != nil {
 		log.Fatalf("failed creating schema resources: %v", err)
 	}
 }
 
 type Response struct {
-	Code int
-	Msg  string
-	Data interface{}
+	Code int         `json:"code"`
+	Msg  string      `json:"msg"`
+	Data interface{} `json:"data"`
 }
 
 func ResponseJSON(c *gin.Context, httpCode, errCode int, msg string, data interface{}) {
@@ -74,6 +88,7 @@ func BindAndValid(c *gin.Context, form interface{}) (int, int) {
 }
 
 // @Summary create user
+// @Tags User
 // @Produce application/json
 // @Param username formData string true "username"
 // @Param password formData string true "password"
@@ -84,7 +99,7 @@ func handleCreateUser(c *gin.Context) {
 	type PostParam struct {
 		UserName string `form:"username" json:"username" valid:"Required; MaxSize(50)"`
 		Password string `form:"password" json:"password" valid:"Required; MaxSize(50)"`
-		NickName string `form:"nickname" json:"nickname" valid:"Required; MaxSize(50)"`
+		Nickname string `form:"nickname" json:"nickname" valid:"Required; MaxSize(50)"`
 	}
 	var form PostParam
 
@@ -98,7 +113,7 @@ func handleCreateUser(c *gin.Context) {
 		Create().
 		SetUsername(form.UserName).
 		SetPassword(form.Password).
-		SetNickname(form.NickName).
+		SetNickname(form.Nickname).
 		Save(context.Background())
 	if err != nil {
 		ResponseJSON(c, http.StatusOK, 500, "create user failed:"+err.Error(), nil)
@@ -108,10 +123,68 @@ func handleCreateUser(c *gin.Context) {
 	type ResponseData struct {
 		UserID   uint64 `json:"UserID"`
 		UserName string `json:"UserName"`
-		NickName string `json:"NickName"`
+		Nickname string `json:"nickname"`
 	}
 	var resp ResponseData
-	resp.NickName = form.NickName
+	resp.Nickname = form.Nickname
+	resp.UserName = form.UserName
+	resp.UserID = uint64(usr.ID)
+
+	ResponseJSON(c, http.StatusOK, 200, "", resp)
+}
+
+// @Summary update user
+// @Tags User
+// @Produce application/json
+// @Param username formData string true "username"
+// @Param password formData string true "password"
+// @Param nickname formData string true "nickname"
+// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Router /user/update [post]
+func handleUpdateUser(c *gin.Context) {
+	type PostParam struct {
+		UserName string `form:"username" json:"username" valid:"Required; MaxSize(50)"`
+		Password string `form:"password" json:"password" valid:"Required; MaxSize(50)"`
+		Nickname string `form:"nickname" json:"nickname" valid:"Required; MaxSize(50)"`
+	}
+	var form PostParam
+
+	httpCode, errCode := BindAndValid(c, &form)
+	if errCode != 200 {
+		ResponseJSON(c, httpCode, errCode, "invalid param", nil)
+		return
+	}
+
+	count, _ := sr.db.User.
+		Update().
+		SetUsername(form.UserName).
+		SetPassword(form.Password).
+		SetNickname(form.Nickname).
+		Where(user.Username(form.UserName)).
+		Save(context.Background())
+
+	if count == 0 {
+		ResponseJSON(c, http.StatusOK, 500, "update user failed", nil)
+		return
+	}
+
+	usr, _ := sr.db.User.
+		Query().
+		Where(user.Username(form.UserName)).
+		First(context.Background())
+
+	if usr == nil {
+		ResponseJSON(c, http.StatusOK, 500, "user doesn't exist", nil)
+		return
+	}
+
+	type ResponseData struct {
+		UserID   uint64 `json:"userid"`
+		UserName string `json:"username"`
+		Nickname string `json:"nickname"`
+	}
+	var resp ResponseData
+	resp.Nickname = form.Nickname
 	resp.UserName = form.UserName
 	resp.UserID = uint64(usr.ID)
 
@@ -120,11 +193,12 @@ func handleCreateUser(c *gin.Context) {
 
 func runHttpServer() {
 	r := gin.New()
+
 	r.Use(gin.Logger())
+
 	r.Use(gin.Recovery())
 
 	sr.http = r
-	docs.SwaggerInfo.BasePath = "/api/v1"
 
 	// web api document http://localhost:8080/swagger/index.html
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler,
@@ -134,13 +208,15 @@ func runHttpServer() {
 	// Create
 	r.POST("/user/create", handleCreateUser)
 
+	// Update
+	r.POST("/user/update", handleUpdateUser)
+
 	// Listen and serve on 0.0.0.0:8080
 	_ = r.Run(":8080")
 }
 
 func main() {
 	//before build run if you add new api you have to command this "swag init" first;
-
 	initDatabase()
 	runHttpServer()
 }
